--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: friedland
 Type: Package
-Title: What the package does (short line)
-Version: 1.0
-Date: 2017-02-17
+Title: Making Functions Do Your Econometrics For You
+Version: 0.9
+Date: 2017-03-2
 Author: Evan Friedland
 Maintainer: Evan Friedland <evan.friedland@gmail.com>
 Description: A repository of the functions and datasets I use. Many of the 
@@ -11,4 +11,4 @@ Description: A repository of the functions and datasets I use. Many of the
     while the methodologies are attributable to my classes with Professor 
     Robert Kaufmann at Boston University. 
 License: GPL-2
-Depends: graphics, grDevices, stats, utils, zoo, dynlm
+Depends: graphics, grDevices, stats, utils, zoo, dynlm, lmtest, sandwich
