--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,3 @@
 exportPattern("^[[:alpha:]]+")
 
-import(graphics, grDevices, stats, utils, cars, zoo, dynlm, lmtest, sandwich)
+import(graphics, grDevices, stats, utils, zoo, dynlm, lmtest, sandwich)
